fix: remove white spaces

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     margin: 30px;
     font-family: Georgia, 'Times New Roman', Times, serif, sans-serif;
     color: rgb(59, 51, 35);
-    line-height: 25px;    
+    line-height: 25px;
 }
 
 section {
@@ -26,16 +26,16 @@ section {
     top: 35%;
 }
 
-
 details pre {
-    background-color: rgb(240, 255, 255, 0.5) ;
+    background-color: rgb(240, 255, 255, 0.5);
     border: 1px solid white;
     border-radius: 5px;
     padding: 10px;
 }
 
-h1, h2 {
-border-bottom: 1px solid rgb(59, 51, 35);
+h1,
+h2 {
+    border-bottom: 1px solid rgb(59, 51, 35);
 }
 
 .no-border {
